<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/lb_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:id="@+id/abt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
	            android:id="@+id/negativeButton"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_alignParentRight="true"
	            android:layout_marginTop="13dp"
	            android:layout_marginRight="13dp"
	            android:background="@drawable/tuich"
	            android:gravity="center" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tableRow1TextView1"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="游戏名称："
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/app_name"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="版本号："
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/version"
                    android:textColor="#000000" />
            </TableRow>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TableLayout2"
                android:layout_marginTop="30dp" >

               <!--  <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="公司名称："
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/company"
                        android:textColor="#000000" />
                </TableRow> -->

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="客服电话："
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/servicephone"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="官方qq群："
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/qq"
                        android:textColor="#000000" />
                </TableRow>
            </TableLayout>
        </TableLayout>
    </RelativeLayout>
	<RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >
              <Button
                  android:id="@+id/positiveButton"
                  android:layout_width="100dp"
                  android:layout_height="60dp"
                  android:layout_marginTop="40dp"
                  android:layout_centerHorizontal="true"
                  android:background="@drawable/wzhdl" />
          
		</RelativeLayout>
</LinearLayout>